# 3dprocessing

./: CMakeLists.txt  Readme.md  conanfile.txt
openmesh/: CMakeLists.txt  main.cpp  mesh.h
vtk3d/: CMakeLists.txt  main.cpp
